--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 	
 	<div id="menu-container">
 		<div id="menu-1" class="homepage home-section container">
-			<div class="home-intro text-center animated fadeInRight">
+			<div class="home-intro text-center animated fadeInDown">
 				<h2 class="welcome-title">Introduction</h2>
 				<p>Raleway HTML5 template is provided by <span class="blue">template</span><span class="green">mo</span>. Credit goes to <a href="http://unsplash.com">Unsplash</a> for photos. Feel free to modify and use this layout for any personal or commercial website.</p>
 				<ul class="list-icons">
@@ -93,7 +93,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 		<div id="menu-p1" class="content project-1 container">
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1">
-					<div class="inner-story animated fadeInRight text-center">
+					<div class="inner-story animated fadeInUp text-center">
 						<h2>Robo-Rally</h2>
 						<h4>University Project (6 students)</h4>
 						<p><b>Requirements:</b></br>
@@ -148,7 +148,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 		<div id="menu-p2" class="content project-2 container">
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1">
-					<div class="inner-story animated fadeInRight text-center">
+					<div class="inner-story animated fadeInUp text-center">
 						<h2>Rendering Contest</h2>
 						<h4>University Project (2 students)</h4>
 						<p><b>Requirements:</b></br>
