Add google drive links

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4 col-sm-6 p-4 animated umScaleIn">
+					<!--<div class="col-md-4 col-sm-6 p-4 animated umScaleIn">
 						<div class="project-item">
 							<img src="img/4.jpg" alt="">
 						</div>
@@ -85,7 +85,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 						<div class="project-item">
 							<img src="img/6.jpg" alt="">
 						</div>
-					</div>
+					</div>-->
 				</div>
 			</div>
 		</div>
@@ -107,7 +107,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 						</p>
 						<ul class="list-icons black">
 							<li><a href="https://github.com/Or4kel/RoboRally-Public"><i class="fa fa-github"></i></a></li>
-							<li><a href="https://github.com/Or4kel/RoboRally-Public"><i class="fa fa-cloud-download"></i></a></li>
+							<li><a href="https://drive.google.com/file/d/1AB1FQNJjr5qHZLB8IZyTRzbrDwro1bjZ/view?usp=sharing"><i class="fa fa-cloud-download"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -153,7 +153,14 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 						<h4>University Project (2 students)</h4>
 						<p><b>Requirements:</b></br>
 							Graphics demo implementing various rendering techniques
+						</p></br>
+						<p><b>What I did:</b></br>
+							Implement PBR materials, environment-mapping and shadow-mapping</br>
+							Create the 3D models used in the scene
 						</p>
+						<ul class="list-icons black">
+							<li><a href="https://drive.google.com/file/d/1oheZKl8L4hNWRvGYb7rIed2mLPf3iGiH/view?usp=sharing"><i class="fa fa-cloud-download"></i></a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -164,19 +171,36 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 							<figure>
 								<img src="img/demo_2.png" alt="">
 							</figure>
-							<div class="offer-content text-center">
-								<h4>Own 3D game/rendering engine</h4>
-								<p>Developed my own 3D rendering engine with OpenGL (using <a href="https://www.lwjgl.org/">lwjgl</a>).
-								</p>
-								<span class="offer-left"><i></i></span>
-								<span class="offer-right"><i></i></span>
-							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+
+		<div id="menu-p3" class="content project-3 container">
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<div class="inner-story animated fadeInUp text-center">
+						<h2>Point Clouds</h2>
+						<h4>University Project (2 students)</h4>
+						<p><b>Requirements:</b></br>
+							Generate point clouds from 3d scene as reference for photogrammetry results
+						</p></br>
+						<p><b>What I did:</b></br>
+							Proposed usage of Blender particle system to generate points</br>
+							Create Blender addon for access to particle data, automation and debugging</br>
+							Adjust render passes for accessing depth information
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
 	</div>
+
+	
 
 
 	<footer class="site-footer container text-center">
