portrait size fix

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 			<div class="home-intro animated fadeInDown">
 				<!--<h2 class="welcome-title">Introduction</h2>-->
 				<div class="row">
-					<div class="col-md-4 col-md-offset-1">
-						<img src="img/portrait.png" alt="" style="width: 100%; border-radius: 50%;">
+					<div class="col-md-4 col-md-offset-1 text-center">
+						<img class="portrait" src="img/portrait.png" alt="">
 					</div>
 					<div class="col-md-6">
 						<h3 class="intro"><b>Adrian Schuhmaier</b></br>3D Graphics Programmer</br>Stuttgart, Germany</h3>
@@ -72,7 +72,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 					</div>
 					<div class="col-md-3 col-sm-6 p-3 animated umScaleIn">
 						<div class="project-item">
-							<img src="img/1.jpg" alt="">
+							<img src="img/blender_1.png" alt="">
 							<div class="overlay project-3">
 								<h4><a><h2>Point Clouds</h2></br>Blender Add-on</a></h4>
 							</div>
