Changed image resolutions

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 				<!--<h2 class="welcome-title">Introduction</h2>-->
 				<div class="row">
 					<div class="col-md-4 col-md-offset-1 text-center">
-						<img class="portrait" src="img/portrait.png" alt="">
+						<img class="portrait" src="img/portrait.jpg" alt="">
 					</div>
 					<div class="col-md-6">
 						<h3 class="intro"><b>Adrian Schuhmaier</b></br>3D Graphics Programmer</br>Stuttgart, Germany</h3>
@@ -56,7 +56,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 				<div class="row">
 					<div class="col-md-3 col-sm-6 p-1 animated umScaleIn">
 						<div class="project-item">
-							<img src="img/thumb_robo.png" alt="">
+							<img src="img/thumb_robo.jpg" alt="">
 							<div class="overlay project-1">
 								<h4><a><h2>Robo-Rally</h2></br>3D multiplayer game</br>+ custom engine</a></h4>
 							</div>
@@ -64,7 +64,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 					</div>
 					<div class="col-md-3 col-sm-6 p-2 animated umScaleIn">
 						<div class="project-item">
-							<img src="img/thumb_rendering.png" alt="">
+							<img src="img/thumb_rendering.jpg" alt="">
 							<div class="overlay project-2">
 								<h4><a><h2>Rendering Contest</h2></br>Graphics Demo</a></h4>
 							</div>
@@ -72,7 +72,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 					</div>
 					<div class="col-md-3 col-sm-6 p-3 animated umScaleIn">
 						<div class="project-item">
-							<img src="img/blender_1.png" alt="">
+							<img src="img/blender_1.PNG" alt="">
 							<div class="overlay project-3">
 								<h4><a><h2>Point Clouds</h2></br>Blender Add-on</a></h4>
 							</div>
@@ -80,9 +80,9 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 					</div>
 					<div class="col-md-3 col-sm-6 p-4 animated umScaleIn">
 						<div class="project-item">
-							<img src="img/thumb_chat.png" alt="">
+							<img src="img/thumb_chat.jpg" alt="">
 							<div class="overlay project-4">
-								<h4><a><h2>Android Chat</h2></br>Experiments</a></h4>
+								<h4><a><h2>Android Chat</h2></br>Hobby Projects</a></h4>
 							</div>
 						</div>
 					</div>
@@ -169,7 +169,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 					<div class="col-md-10 col-md-offset-1">
 						<div class="offer-item offer-1 animated fadeInUp">
 							<figure>
-								<img src="img/demo_2.png" alt="">
+								<img src="img/rendering.jpg" alt="">
 							</figure>
 						</div>
 					</div>
@@ -193,6 +193,24 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 							Create Blender addon for access to particle data, automation and debugging</br>
 							Automatically render scene to access depth information for filtering
 						</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="offer-holder animated fadeInUp">
+					<div class="col-md-6 col-md-offset-1">
+						<div class="offer-item offer-1 animated fadeInUp">
+							<figure>
+								<img src="img/blender_1.PNG" alt="">
+							</figure>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="offer-item offer-2 animated fadeInUp">
+							<figure>
+								<img src="img/blender_2.PNG" alt="">
+							</figure>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -221,35 +239,35 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 			</div>
 			<div class="row">
 				<div class="offer-holder animated fadeInUp">
-					<div class="col-md-2 col-md-offset-1">
+					<div class="col-md-2 col-sm-4 col-md-offset-1">
 						<div class="offer-item offer-1 animated fadeInUp">
 							<figure>
 								<img src="img/chat_1.png" alt="">
 							</figure>
 						</div>
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-2 col-sm-4">
 						<div class="offer-item offer-2 animated fadeInUp">
 							<figure>
 								<img src="img/chat_2.png" alt="">
 							</figure>
 						</div>
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-2 col-sm-4">
 						<div class="offer-item offer-3 animated fadeInUp">
 							<figure>
 								<img src="img/chat_3.png" alt="">
 							</figure>
 						</div>
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-2 col-sm-4">
 						<div class="offer-item offer-4 animated fadeInUp">
 							<figure>
 								<img src="img/chat_4.png" alt="">
 							</figure>
 						</div>
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-2 col-sm-4">
 						<div class="offer-item offer-5 animated fadeInUp">
 							<figure>
 								<img src="img/chat_5.png" alt="">
